--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
     <link rel="stylesheet" href="public/css/normalize.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200italic,400,700">
-    <link rel="stylesheet" href="/public/css/base.css">
+    <link rel="stylesheet" href="public/css/base.css">
   </head>
 
   <body>
+  	<div id="bCard">
+  		<h1>Kyle Sturmer</h1>
+  	</div>
   </body>
 
 </html>
