--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
   	<div id="bCard">
   		<h1>Kyle Sturmer</h1>
+  		<p class="quote">"Don't believe everything you see on the internet" - Abraham Lincoln</p>
   	</div>
   </body>
 
