--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <body>
   	<div id="bCard">
+  		<img src="http://api.adorable.io/avatars/150/David-Moran.png"/>
   		<h1>Kyle Sturmer</h1>
   		<p class="quote">"Don't believe everything you see on the internet" - Abraham Lincoln</p>
   	</div>
