Add github profile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="public/css/normalize.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200italic,400,700">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="public/css/base.css">
   </head>
 
@@ -15,6 +16,7 @@
   	<div id="bCard">
   		<img src="http://api.adorable.io/avatars/150/David-Moran.png"/>
   		<h1>Kyle Sturmer</h1>
+  		<a href="https://github.com/DaveMoran"><i class="fa fa-github" aria-hidden="true"></i></a>
   		<p class="quote">"Don't believe everything you see on the internet" - Abraham Lincoln</p>
   	</div>
   </body>
